# longfellow-zk

./: 404.html  Doxyfile  README.md  index.html  index.xml  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake-multi-platform.yml  docs.yml
blog/: index.html  index.xml
blog/_print/: index.html
blog/news/: index.html  index.xml
blog/releases/: index.html  index.xml
categories/: index.html  index.xml
categories/examples/: index.html  index.xml
docs/: hugo.yaml  index.html  index.xml  package-lock.json
docs/_print/: index.html
docs/benchmarks/: index.html
docs/html/: algebra_2sysdep_8h_source.html  bit__plucker__constants_8h_source.html  bogorng_8h_source.html  cbor__witness_8h_source.html  classproofs_1_1BitAdderAux_3_01Logic_00_01N_00_01true_01_4__coll__graph.map  classproofs_1_1BitAdderAux_3_01Logic_00_01N_00_01true_01_4__coll__graph.md5  classproofs_1_1BitPluckerEncoder.html  classproofs_1_1BitPlucker__coll__graph.md5  classproofs_1_1CborPlucker.html  classproofs_1_1CborPlucker__coll__graph.md5  classproofs_1_1Dense.html  classproofs_1_1Dense__inherit__graph.map  classproofs_1_1Eqs.html  classproofs_1_1Eqs__coll__graph.map  classproofs_1_1EvaluationBackend.html  classproofs_1_1FFT.html  classproofs_1_1FFTConvolution.html  classproofs_1_1FFTInterpolation.html  classproofs_1_1FlatSHA256Circuit__coll__graph.md5  classproofs_1_1Interpolation.html  classproofs_1_1LCH14ReedSolomon.html  classproofs_1_1MACReference.html  classproofs_1_1MacGF2Witness.html  classproofs_1_1MdocHash.html  (+140 more)
js/: main.min.e7117d4ace212947316a62466f8f9307b36901beb503a477147b340c0f9ec85c.js
lib/: CMakeLists.txt
lib/CMake/: aarch64-linux-clang.cmake  i386-linux-clang.cmake  i386-linux-gcc.cmake  proofs.cmake
lib/algebra/: CMakeLists.txt  blas.h  bogorng.h  convolution.h  fft.h  fft_interpolation.h  fft_interpolation_test.cc  fft_test.cc  fp2.h  fp2_test.cc  fp_generic.h  fp_p128.h  fp_test.cc  interpolation_test.cc  limb.h  limb_test.cc  nat_test.cc  permutations.h  poly.h  poly_test.cc  reed_solomon_test.cc  rfft_test.cc  sysdep.h  sysdep_test.cc  utility_test.cc
lib/arrays/: CMakeLists.txt  affine_test.cc  eqs.h  eqs_test.cc  sparse.h
lib/cbor/: CMakeLists.txt  host_decoder_test.cc
lib/circuits/anoncred/: CMakeLists.txt  README.md  ptrcred.h  small.h  small_examples.h  small_io.h  small_test.cc  small_witness.h
lib/circuits/base64/: CMakeLists.txt  README.md  base64.espresso  decode.h  decode_circuit_test.cc  decode_test.cc
lib/circuits/cbor_parser/: CMakeLists.txt  cbor.h  cbor_byte_decoder.h  cbor_byte_decoder_test.cc  cbor_constants.h  cbor_pluck.h  cbor_pluck_test.cc  cbor_test.cc  cbor_testing.h  cbor_witness.h  mso2_test.cc  mso_test.cc  scan.h  scan_test.cc
lib/circuits/compiler/: CMakeLists.txt  canonicalization_test.cc  circuit_id.h  compiler.h  compiler_test.cc
lib/circuits/ecdsa/: CMakeLists.txt  verify_circuit.h  verify_external_test.cc  verify_test.cc
lib/circuits/jwt/: CMakeLists.txt  jwt.h  jwt_constants.h  jwt_test.cc  jwt_witness.h
lib/circuits/logic/: CMakeLists.txt  bit_adder_test.cc  bit_plucker.h  bit_plucker_test.cc  compiler_backend.h  counter.h  counter_test.cc  evaluation_backend.h  logic.h  logic_circuit_test.cc  logic_test.cc  memcmp_test.cc  polynomial_test.cc  routing_test.cc
lib/circuits/mac/: CMakeLists.txt  mac_circuit.h  mac_circuit_test.cc
lib/circuits/mdoc/: CMakeLists.txt  README.md  circuit_maker.cc  mdoc_1f.h  mdoc_1f_io.h  mdoc_1f_test.cc  mdoc_1f_witness.h  mdoc_attribute_ids.h  mdoc_attribute_test.cc  mdoc_circuit_id.cc  mdoc_examples.h  mdoc_generate_circuit.cc  mdoc_hash.h  mdoc_revocation.h  mdoc_revocation_constants.h  mdoc_revocation_test.cc  mdoc_revocation_witness.h  mdoc_signature_test.cc  mdoc_test_attributes.h  mdoc_witness.h  mdoc_zk.cc  mdoc_zk.h  mdoc_zk_test.cc  zk_spec.cc  zk_spec_test.cc
lib/circuits/mdoc/circuits/: README.md
lib/circuits/sha/: CMakeLists.txt  flatsha256_circuit.h  flatsha256_circuit_test.cc  flatsha256_io.h  sha256_test_values.h
lib/circuits/sha3/: CMakeLists.txt  sha3_circuit.h  sha3_circuit_test.cc  sha3_reference_test.cc
lib/ec/: CMakeLists.txt  elliptic_curve_test.cc
lib/gf2k/: CMakeLists.txt  gf2_128.h  gf2_128_bench.cc  gf2_128_test.cc  lch14_bench.cc  lch14_reed_solomon_test.cc  lch14_test.cc  sysdep.h
lib/ligero/: CMakeLists.txt  ligero_param.h  ligero_test.cc
lib/merkle/: CMakeLists.txt  merkle_tree.h  merkle_tree_test.cc
lib/proto/: CMakeLists.txt  circuit.h  circuit_test.cc
lib/random/: CMakeLists.txt  random_test.cc  transcript.h  transcript_test.cc
lib/sumcheck/: CMakeLists.txt  circuit.h  prover.h  prover_layers.h  quad_test.cc  sumcheck_test.cc  testing.h  verifier.h  verifier_layers.h
lib/testing/: CMakeLists.txt  test_main.cc
lib/util/: CMakeLists.txt  ceildiv_test.cc  crypto.cc  crypto.h  log.cc  panic.h
lib/zk/: CMakeLists.txt  zk_common.h  zk_proof.h  zk_test.cc  zk_testing.h  zk_verifier.h
scss/: main.min.6c0ab20cfeb11b67fd4c1e29a9c26cb743b7f22670386f8fae1066506b5ac33c.css
tags/: index.html  index.xml
(+858 files in other folders)
